first上传期末作业

--- a/期末大作业/大作业.md
+++ b/期末大作业/大作业.md
@@ -1,4 +1,30 @@
 # 逆向工程与软件安全实验报告  
 ## 期末大作业  
 
-### 
+### API hook方法更改notepad保存内容  
+#### 实验环境  
+* Windows 10  
+* notepad.exe  
+* Visual Studio 2019  
+* WinDbg x64  
+
+#### 实验过程  
+1. 查看`notepad.exe`系统位置  
+![notepad位置](./image/notepad位置.png)  
+2. 查看`notepad.exe`导入表  
+`dumpbin /imports C:\Windows\System32\notepad.exe > D:\imports.txt`  
+![查看导入表](./image/查看导入表.png)  
+3. 在导入表中查找与保存内容有关的函数  
+在`api-ms-win-core-file-l1-1-0.dll`中用到`WriteFile`  
+![writefile](./image/writefile.png)  
+4. 查找`WriteFile`函数相关文档  
+[WriteFile function](https://docs.microsoft.com/en-us/windows/win32/api/fileapi/nf-fileapi-writefile)  
+![writefile文档](./image/writefile文档.png)  
+5. WinDbg尝试篡改确认函数功能  
+[训练使用WinDbg](https://github.com/AlinaZxy/Reverse/blob/%E6%9C%9F%E6%9C%AB%E5%A4%A7%E4%BD%9C%E4%B8%9A/%E6%9C%9F%E6%9C%AB%E5%A4%A7%E4%BD%9C%E4%B8%9A/%E5%AE%9E%E9%AA%8C%E5%87%86%E5%A4%87/%E5%AE%9E%E9%AA%8C%E5%87%86%E5%A4%87.md)  
+![训练使用](./image/训练使用.png)  
+![下断点](./image/下断点.png)  
+6. 尝试API hook  
+[参考代码](https://github.com/tinysec/iathook)  
+
+
