除hook代码外其他

--- a/期末大作业/大作业.md
+++ b/期末大作业/大作业.md
@@ -15,7 +15,7 @@
 `dumpbin /imports C:\Windows\System32\notepad.exe > D:\imports.txt`  
 ![查看导入表](./image/查看导入表.png)  
 3. 在导入表中查找与保存内容有关的函数  
-在`api-ms-win-core-file-l1-1-0.dll`中用到`WriteFile`  
+在`kernel32.dll`中用到`WriteFile`  
 ![writefile](./image/writefile.png)  
 4. 查找`WriteFile`函数相关文档  
 [WriteFile function](https://docs.microsoft.com/en-us/windows/win32/api/fileapi/nf-fileapi-writefile)  
@@ -27,4 +27,11 @@
 6. 尝试API hook  
 [参考代码](https://github.com/tinysec/iathook)  
 
+#### 问题与解决  
+1. 查看导入表认为是`api-ms-win-core-file-l1-1-0.dll`  
+解决方案：在查阅官方文档时发现是`kernel32.dll`  
+![kernel32](./image/kernel32.png)  
+2. 在`APIhook`和`IAThook`中陷入纠结，思考二者有何区别  
+解决方案：通过查阅资料发现，`IAThook`其实是`APIhook`的一种实现方法，IAT 法就是通过修改 IAT 表中的函数地址而达到的 API 截获的方法  
+[API HOOK的 IAT方法](https://blog.csdn.net/misterliwei/article/details/840983)  
 
